--- a/ProjectManagment/nbproject/private/private.properties
+++ b/ProjectManagment/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Michael\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\yuzha3124\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
