--- a/ProjectManagment/ProjectManagment/nbproject/private/private.properties
+++ b/ProjectManagment/ProjectManagment/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\miczo4487\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\evwil0771\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
